# mailing-service-on-fastapi

./: .env.example  .flake8  .gitignore  README.md  alembic.ini  db.env.example  docker-compose.yml  pyproject.toml  task.md
celery_queue/: celery.py  email.py  tasks.py
docker/api/: Dockerfile
mailings/: config.py  database.py  main.py
mailings/dao/: base.py
mailings/mailings/: dao.py  models.py  routes.py  schemas.py  services.py
mailings/migration/: env.py
mailings/migration/versions/: 64715ef99089_initial_revision.py
pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
pgdata/base/16384/: 1247  1247_vm  1249  1249_fsm  1249_vm  1259  1259_vm  13407  2579  2606  2606_vm  2608  2608_fsm  2608_vm  2610  2610_vm  2619  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002
pgdata/base/5/: 2619  pg_internal.init
pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
pgdata/pg_stat/: pgstat.stat
